parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> expr
Rule 2     simple_type -> INT
Rule 3     simple_type -> BOOL
Rule 4     simple_type -> UNIT
Rule 5     type -> simple_type
Rule 6     tlist -> type COMMA type
Rule 7     tlist -> type COMMA tlist
Rule 8     type -> LT paramlist GT
Rule 9     type -> LT param GT
Rule 10    type -> LBRAC tlist ARROW type RBRAC
Rule 11    type -> LBRAC type ARROW type RBRAC
Rule 12    type -> LBRAC ARROW type RBRAC
Rule 13    qualifier -> A
Rule 14    qualifier -> B
Rule 15    qualifier -> U
Rule 16    expr -> LET ID IN expr
Rule 17    expr -> LET ID ID ASSIGN expr IN expr
Rule 18    expr -> expr ASSIGN expr
Rule 19    expr -> IF expr THEN expr ELSE expr END
Rule 20    expr -> WHILE expr DO expr END
Rule 21    expr -> expr SEMICOLON expr
Rule 22    expr -> PRINT LPAREN expr RPAREN
Rule 23    expr -> DESTROY LPAREN expr RPAREN
Rule 24    expr -> expr DOT ID
Rule 25    expr -> expr PLUS expr
Rule 26    expr -> expr MINUS expr
Rule 27    expr -> expr TIMES expr
Rule 28    expr -> expr DIVIDE expr
Rule 29    expr -> expr AND expr
Rule 30    expr -> expr OR expr
Rule 31    expr -> expr EQ expr
Rule 32    expr -> expr GT expr
Rule 33    expr -> expr GTE expr
Rule 34    expr -> expr LT expr
Rule 35    expr -> expr LTE expr
Rule 36    expr -> expr NEQ expr
Rule 37    expr -> expr MOD expr
Rule 38    expr -> MINUS expr
Rule 39    expr -> NOT expr
Rule 40    expr -> TIMES expr
Rule 41    expr -> expr REF
Rule 42    expr -> LPAREN expr RPAREN
Rule 43    expr -> LPAREN RPAREN
Rule 44    expr -> INT_LITERAL
Rule 45    expr -> BOOL_LITERAL
Rule 46    expr -> ID
Rule 47    varlist -> ID COMMA ID
Rule 48    varlist -> ID COMMA varlist
Rule 49    expr -> BRANCH LPAREN varlist RPAREN expr END
Rule 50    expr -> BRANCH LPAREN ID RPAREN expr END
Rule 51    expr -> BRANCH LPAREN RPAREN expr END
Rule 52    field -> ID ASSIGN qualifier expr
Rule 53    fieldlist -> field COMMA field
Rule 54    fieldlist -> field COMMA fieldlist
Rule 55    expr -> LCURL fieldlist RCURL
Rule 56    expr -> LCURL field RCURL
Rule 57    param -> ID COLON qualifier type
Rule 58    paramlist -> param COMMA param
Rule 59    paramlist -> param COMMA paramlist
Rule 60    expr -> FUN LPAREN paramlist RPAREN type ARROW expr END
Rule 61    expr -> FUN LPAREN param RPAREN type ARROW expr END
Rule 62    expr -> FUN LPAREN RPAREN type ARROW expr END
Rule 63    exprlist -> expr COMMA expr
Rule 64    exprlist -> expr COMMA exprlist
Rule 65    expr -> ID LPAREN exprlist RPAREN
Rule 66    expr -> ID LPAREN expr RPAREN
Rule 67    expr -> ID LPAREN RPAREN

Terminals, with rules where they appear

A                    : 13
AND                  : 29
ARROW                : 10 11 12 60 61 62
ASSIGN               : 17 18 52
B                    : 14
BOOL                 : 3
BOOL_LITERAL         : 45
BRANCH               : 49 50 51
COLON                : 57
COMMA                : 6 7 47 48 53 54 58 59 63 64
DESTROY              : 23
DIVIDE               : 28
DO                   : 20
DOT                  : 24
ELSE                 : 19
END                  : 19 20 49 50 51 60 61 62
EQ                   : 31
FUN                  : 60 61 62
GT                   : 8 9 32
GTE                  : 33
ID                   : 16 17 17 24 46 47 47 48 50 52 57 65 66 67
IF                   : 19
IN                   : 16 17
INT                  : 2
INT_LITERAL          : 44
LBRAC                : 10 11 12
LCURL                : 55 56
LET                  : 16 17
LPAREN               : 22 23 42 43 49 50 51 60 61 62 65 66 67
LT                   : 8 9 34
LTE                  : 35
MINUS                : 26 38
MOD                  : 37
NEQ                  : 36
NOT                  : 39
OR                   : 30
PLUS                 : 25
PRINT                : 22
RBRAC                : 10 11 12
RCURL                : 55 56
REF                  : 41
RPAREN               : 22 23 42 43 49 50 51 60 61 62 65 66 67
SEMICOLON            : 21
THEN                 : 19
TIMES                : 27 40
U                    : 15
UNIT                 : 4
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

expr                 : 1 16 17 17 18 18 19 19 19 20 20 21 21 22 23 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 39 40 41 42 49 50 51 52 60 61 62 63 63 64 66
exprlist             : 64 65
field                : 53 53 54 56
fieldlist            : 54 55
param                : 9 58 58 59 61
paramlist            : 8 59 60
program              : 0
qualifier            : 52 57
simple_type          : 5
tlist                : 7 10
type                 : 6 6 7 10 11 11 12 57 60 61 62
varlist              : 48 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . expr
    (16) expr -> . LET ID IN expr
    (17) expr -> . LET ID ID ASSIGN expr IN expr
    (18) expr -> . expr ASSIGN expr
    (19) expr -> . IF expr THEN expr ELSE expr END
    (20) expr -> . WHILE expr DO expr END
    (21) expr -> . expr SEMICOLON expr
    (22) expr -> . PRINT LPAREN expr RPAREN
    (23) expr -> . DESTROY LPAREN expr RPAREN
    (24) expr -> . expr DOT ID
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr AND expr
    (30) expr -> . expr OR expr
    (31) expr -> . expr EQ expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr GTE expr
    (34) expr -> . expr LT expr
    (35) expr -> . expr LTE expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr MOD expr
    (38) expr -> . MINUS expr
    (39) expr -> . NOT expr
    (40) expr -> . TIMES expr
    (41) expr -> . expr REF
    (42) expr -> . LPAREN expr RPAREN
    (43) expr -> . LPAREN RPAREN
    (44) expr -> . INT_LITERAL
    (45) expr -> . BOOL_LITERAL
    (46) expr -> . ID
    (49) expr -> . BRANCH LPAREN varlist RPAREN expr END
    (50) expr -> . BRANCH LPAREN ID RPAREN expr END
    (51) expr -> . BRANCH LPAREN RPAREN expr END
    (55) expr -> . LCURL fieldlist RCURL
    (56) expr -> . LCURL field RCURL
    (60) expr -> . FUN LPAREN paramlist RPAREN type ARROW expr END
    (61) expr -> . FUN LPAREN param RPAREN type ARROW expr END
    (62) expr -> . FUN LPAREN RPAREN type ARROW expr END
    (65) expr -> . ID LPAREN exprlist RPAREN
    (66) expr -> . ID LPAREN expr RPAREN
    (67) expr -> . ID LPAREN RPAREN

    LET             shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    DESTROY         shift and go to state 9
    MINUS           shift and go to state 10
    NOT             shift and go to state 12
    TIMES           shift and go to state 11
    LPAREN          shift and go to state 8
    INT_LITERAL     shift and go to state 13
    BOOL_LITERAL    shift and go to state 14
    ID              shift and go to state 4
    BRANCH          shift and go to state 15
    LCURL           shift and go to state 16
    FUN             shift and go to state 17

    program                        shift and go to state 1
    expr                           shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> expr .
    (18) expr -> expr . ASSIGN expr
    (21) expr -> expr . SEMICOLON expr
    (24) expr -> expr . DOT ID
    (25) expr -> expr . PLUS expr
    (26) expr -> expr . MINUS expr
    (27) expr -> expr . TIMES expr
    (28) expr -> expr . DIVIDE expr
    (29) expr -> expr . AND expr
    (30) expr -> expr . OR expr
    (31) expr -> expr . EQ expr
    (32) expr -> expr . GT expr
    (33) expr -> expr . GTE expr
    (34) expr -> expr . LT expr
    (35) expr -> expr . LTE expr
    (36) expr -> expr . NEQ expr
    (37) expr -> expr . MOD expr
    (41) expr -> expr . REF

    $end            reduce using rule 1 (program -> expr .)
    ASSIGN          shift and go to state 18
    SEMICOLON       shift and go to state 19
    DOT             shift and go to state 20
    PLUS            shift and go to state 21
    MINUS           shift and go to state 22
    TIMES           shift and go to state 23
    DIVIDE          shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    EQ              shift and go to state 27
    GT              shift and go to state 28
    GTE             shift and go to state 29
    LT              shift and go to state 30
    LTE             shift and go to state 31
    NEQ             shift and go to state 32
    MOD             shift and go to state 33
    REF             shift and go to state 34


state 3

    (16) expr -> LET . ID IN expr
    (17) expr -> LET . ID ID ASSIGN expr IN expr

    ID              shift and go to state 35


state 4

    (46) expr -> ID .
    (65) expr -> ID . LPAREN exprlist RPAREN
    (66) expr -> ID . LPAREN expr RPAREN
    (67) expr -> ID . LPAREN RPAREN

    ASSIGN          reduce using rule 46 (expr -> ID .)
    SEMICOLON       reduce using rule 46 (expr -> ID .)
    DOT             reduce using rule 46 (expr -> ID .)
    PLUS            reduce using rule 46 (expr -> ID .)
    MINUS           reduce using rule 46 (expr -> ID .)
    TIMES           reduce using rule 46 (expr -> ID .)
    DIVIDE          reduce using rule 46 (expr -> ID .)
    AND             reduce using rule 46 (expr -> ID .)
    OR              reduce using rule 46 (expr -> ID .)
    EQ              reduce using rule 46 (expr -> ID .)
    GT              reduce using rule 46 (expr -> ID .)
    GTE             reduce using rule 46 (expr -> ID .)
    LT              reduce using rule 46 (expr -> ID .)
    LTE             reduce using rule 46 (expr -> ID .)
    NEQ             reduce using rule 46 (expr -> ID .)
    MOD             reduce using rule 46 (expr -> ID .)
    REF             reduce using rule 46 (expr -> ID .)
    $end            reduce using rule 46 (expr -> ID .)
    THEN            reduce using rule 46 (expr -> ID .)
    DO              reduce using rule 46 (expr -> ID .)
    RPAREN          reduce using rule 46 (expr -> ID .)
    COMMA           reduce using rule 46 (expr -> ID .)
    ELSE            reduce using rule 46 (expr -> ID .)
    END             reduce using rule 46 (expr -> ID .)
    IN              reduce using rule 46 (expr -> ID .)
    RCURL           reduce using rule 46 (expr -> ID .)
    LPAREN          shift and go to state 36


state 5

    (19) expr -> IF . expr THEN expr ELSE expr END
    (16) expr -> . LET ID IN expr
    (17) expr -> . LET ID ID ASSIGN expr IN expr
    (18) expr -> . expr ASSIGN expr
    (19) expr -> . IF expr THEN expr ELSE expr END
    (20) expr -> . WHILE expr DO expr END
    (21) expr -> . expr SEMICOLON expr
    (22) expr -> . PRINT LPAREN expr RPAREN
    (23) expr -> . DESTROY LPAREN expr RPAREN
    (24) expr -> . expr DOT ID
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr AND expr
    (30) expr -> . expr OR expr
    (31) expr -> . expr EQ expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr GTE expr
    (34) expr -> . expr LT expr
    (35) expr -> . expr LTE expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr MOD expr
    (38) expr -> . MINUS expr
    (39) expr -> . NOT expr
    (40) expr -> . TIMES expr
    (41) expr -> . expr REF
    (42) expr -> . LPAREN expr RPAREN
    (43) expr -> . LPAREN RPAREN
    (44) expr -> . INT_LITERAL
    (45) expr -> . BOOL_LITERAL
    (46) expr -> . ID
    (49) expr -> . BRANCH LPAREN varlist RPAREN expr END
    (50) expr -> . BRANCH LPAREN ID RPAREN expr END
    (51) expr -> . BRANCH LPAREN RPAREN expr END
    (55) expr -> . LCURL fieldlist RCURL
    (56) expr -> . LCURL field RCURL
    (60) expr -> . FUN LPAREN paramlist RPAREN type ARROW expr END
    (61) expr -> . FUN LPAREN param RPAREN type ARROW expr END
    (62) expr -> . FUN LPAREN RPAREN type ARROW expr END
    (65) expr -> . ID LPAREN exprlist RPAREN
    (66) expr -> . ID LPAREN expr RPAREN
    (67) expr -> . ID LPAREN RPAREN

    LET             shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    DESTROY         shift and go to state 9
    MINUS           shift and go to state 10
    NOT             shift and go to state 12
    TIMES           shift and go to state 11
    LPAREN          shift and go to state 8
    INT_LITERAL     shift and go to state 13
    BOOL_LITERAL    shift and go to state 14
    ID              shift and go to state 4
    BRANCH          shift and go to state 15
    LCURL           shift and go to state 16
    FUN             shift and go to state 17

    expr                           shift and go to state 37

state 6

    (20) expr -> WHILE . expr DO expr END
    (16) expr -> . LET ID IN expr
    (17) expr -> . LET ID ID ASSIGN expr IN expr
    (18) expr -> . expr ASSIGN expr
    (19) expr -> . IF expr THEN expr ELSE expr END
    (20) expr -> . WHILE expr DO expr END
    (21) expr -> . expr SEMICOLON expr
    (22) expr -> . PRINT LPAREN expr RPAREN
    (23) expr -> . DESTROY LPAREN expr RPAREN
    (24) expr -> . expr DOT ID
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr AND expr
    (30) expr -> . expr OR expr
    (31) expr -> . expr EQ expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr GTE expr
    (34) expr -> . expr LT expr
    (35) expr -> . expr LTE expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr MOD expr
    (38) expr -> . MINUS expr
    (39) expr -> . NOT expr
    (40) expr -> . TIMES expr
    (41) expr -> . expr REF
    (42) expr -> . LPAREN expr RPAREN
    (43) expr -> . LPAREN RPAREN
    (44) expr -> . INT_LITERAL
    (45) expr -> . BOOL_LITERAL
    (46) expr -> . ID
    (49) expr -> . BRANCH LPAREN varlist RPAREN expr END
    (50) expr -> . BRANCH LPAREN ID RPAREN expr END
    (51) expr -> . BRANCH LPAREN RPAREN expr END
    (55) expr -> . LCURL fieldlist RCURL
    (56) expr -> . LCURL field RCURL
    (60) expr -> . FUN LPAREN paramlist RPAREN type ARROW expr END
    (61) expr -> . FUN LPAREN param RPAREN type ARROW expr END
    (62) expr -> . FUN LPAREN RPAREN type ARROW expr END
    (65) expr -> . ID LPAREN exprlist RPAREN
    (66) expr -> . ID LPAREN expr RPAREN
    (67) expr -> . ID LPAREN RPAREN

    LET             shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    DESTROY         shift and go to state 9
    MINUS           shift and go to state 10
    NOT             shift and go to state 12
    TIMES           shift and go to state 11
    LPAREN          shift and go to state 8
    INT_LITERAL     shift and go to state 13
    BOOL_LITERAL    shift and go to state 14
    ID              shift and go to state 4
    BRANCH          shift and go to state 15
    LCURL           shift and go to state 16
    FUN             shift and go to state 17

    expr                           shift and go to state 38

state 7

    (22) expr -> PRINT . LPAREN expr RPAREN

    LPAREN          shift and go to state 39


state 8

    (42) expr -> LPAREN . expr RPAREN
    (43) expr -> LPAREN . RPAREN
    (16) expr -> . LET ID IN expr
    (17) expr -> . LET ID ID ASSIGN expr IN expr
    (18) expr -> . expr ASSIGN expr
    (19) expr -> . IF expr THEN expr ELSE expr END
    (20) expr -> . WHILE expr DO expr END
    (21) expr -> . expr SEMICOLON expr
    (22) expr -> . PRINT LPAREN expr RPAREN
    (23) expr -> . DESTROY LPAREN expr RPAREN
    (24) expr -> . expr DOT ID
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr AND expr
    (30) expr -> . expr OR expr
    (31) expr -> . expr EQ expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr GTE expr
    (34) expr -> . expr LT expr
    (35) expr -> . expr LTE expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr MOD expr
    (38) expr -> . MINUS expr
    (39) expr -> . NOT expr
    (40) expr -> . TIMES expr
    (41) expr -> . expr REF
    (42) expr -> . LPAREN expr RPAREN
    (43) expr -> . LPAREN RPAREN
    (44) expr -> . INT_LITERAL
    (45) expr -> . BOOL_LITERAL
    (46) expr -> . ID
    (49) expr -> . BRANCH LPAREN varlist RPAREN expr END
    (50) expr -> . BRANCH LPAREN ID RPAREN expr END
    (51) expr -> . BRANCH LPAREN RPAREN expr END
    (55) expr -> . LCURL fieldlist RCURL
    (56) expr -> . LCURL field RCURL
    (60) expr -> . FUN LPAREN paramlist RPAREN type ARROW expr END
    (61) expr -> . FUN LPAREN param RPAREN type ARROW expr END
    (62) expr -> . FUN LPAREN RPAREN type ARROW expr END
    (65) expr -> . ID LPAREN exprlist RPAREN
    (66) expr -> . ID LPAREN expr RPAREN
    (67) expr -> . ID LPAREN RPAREN

    RPAREN          shift and go to state 41
    LET             shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    DESTROY         shift and go to state 9
    MINUS           shift and go to state 10
    NOT             shift and go to state 12
    TIMES           shift and go to state 11
    LPAREN          shift and go to state 8
    INT_LITERAL     shift and go to state 13
    BOOL_LITERAL    shift and go to state 14
    ID              shift and go to state 4
    BRANCH          shift and go to state 15
    LCURL           shift and go to state 16
    FUN             shift and go to state 17

    expr                           shift and go to state 40

state 9

    (23) expr -> DESTROY . LPAREN expr RPAREN

    LPAREN          shift and go to state 42


state 10

    (38) expr -> MINUS . expr
    (16) expr -> . LET ID IN expr
    (17) expr -> . LET ID ID ASSIGN expr IN expr
    (18) expr -> . expr ASSIGN expr
    (19) expr -> . IF expr THEN expr ELSE expr END
    (20) expr -> . WHILE expr DO expr END
    (21) expr -> . expr SEMICOLON expr
    (22) expr -> . PRINT LPAREN expr RPAREN
    (23) expr -> . DESTROY LPAREN expr RPAREN
    (24) expr -> . expr DOT ID
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr AND expr
    (30) expr -> . expr OR expr
    (31) expr -> . expr EQ expr
    (32) expr -> . expr GT expr
    (33) expr -> . expr GTE expr
    (34) expr -> . expr LT expr
    (35) expr -> . expr LTE expr
    (36) expr -> . expr NEQ expr
    (37) expr -> . expr MOD expr
    (38) expr -> . MINUS expr
    (39) expr -> . NOT expr
    (40) expr -> . TIMES expr
    (41) expr -> . expr REF
    (42) expr -> . LPAREN expr RPAREN
    (43) expr -> . LPAREN RPAREN
    (44) expr -> . INT_LITERAL
    (45) expr -> . BOOL_LITERAL
    (46) expr -> . ID
    (49) expr -> . BRANCH LPAREN varlist RPAREN expr END
    (50) expr -> . BRANCH LPAREN ID RPAREN expr END
    (51) expr -> . BRANCH LPAREN RPAREN expr END
    (55) expr -> . LCURL fieldlist RCURL
    (56) expr -> . LCURL field RCURL
    (60) expr -> . FUN LPAREN paramlist RPAREN type ARROW expr END
    (61) expr -> . FUN LPAREN param RPAREN type ARROW expr END
    (62) expr -> . FUN LPAREN RPAREN type ARROW expr END
    (65) expr -> . ID LPAREN exprlist RPAREN
    (66) expr -> . ID LPAREN expr RPAREN
    (67) expr -> . ID LPAREN RPAREN

    LET             shift and go to state 3
    IF              shift and go to state 5
    WHILE           shift and go to state 6
    PRINT           shift and go to state 7
    DESTROY         shift and go to state 9
    MINUS           shift and go to state 10
    NOT             shift and go to state 12
    TIMES           shift and go to state 11
    LPAREN          shift and go to state 8
    INT_LITERAL     shift and go to state 13
    BOOL_LITERAL    shift and go to state 14
    ID              shift and go to state 4
    BRANCH          shift and go to state 15
    LCURL           shift and go to state 16
    FUN             shift and go to state 17

    expr                           shift and go to state 43

state 11
